--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,10 @@
   },
   "homepage": "https://github.com/TylerSchaefer4/tuiter-node-server-app#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
